refactor: remove target java version